@@ -1,3 +1,9 @@
+2001-09-08  Scott S. Goodwin  <scott@scottg.net>
+
+	* Makefile: changed to accept the
+	POSTGRES=/your/postgres/path. This is mandatory. Also changed to
+	expect NSHOME to be ../aolserver.
+
 2001-08-31  Scott Goodwin  <scott@scottg.net>
 
 	* ChangeLog: Created this ChangeLog file from the notes in the
